[gd_scene load_steps=31 format=3 uid="uid://df1mankqa44ij"]

[ext_resource type="Script" path="res://src/entities/characters/minions/minion_base.gd" id="1_56qy7"]
[ext_resource type="Script" path="res://src/entities/characters/character_attributes.gd" id="2_3bav5"]
[ext_resource type="Script" path="res://src/entities/characters/attack_resource.gd" id="3_oxl25"]
[ext_resource type="Texture2D" uid="uid://bhwjl6ea1koq2" path="res://assets/temp/juni_minion.png" id="4_njwdd"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="5_1gsmk"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="6_gxvk7"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="7_qxutn"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="8_wpqln"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="9_hy5u5"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_is_active_guard.gd" id="10_8xqa4"]
[ext_resource type="Script" path="res://addons/godot_state_charts/not_guard.gd" id="11_4nqvq"]
[ext_resource type="Script" path="res://addons/godot_state_charts/all_of_guard.gd" id="12_t2foq"]
[ext_resource type="Texture2D" uid="uid://43injemtwjgx" path="res://assets/particles/PoisonClaw_96x96.png" id="13_wqag5"]
[ext_resource type="Texture2D" uid="uid://brmlt6rgwrn1w" path="res://assets/particles/Explosion_2_64x64.png" id="14_u2fls"]

[sub_resource type="Resource" id="Resource_52qen"]
script = ExtResource("2_3bav5")
health = 50
armour = 0
speed = 150
dexterity = 3
control = 1
rank = 0

[sub_resource type="Resource" id="Resource_uyr1m"]
script = ExtResource("3_oxl25")
attack_range = 60
cooldown = 1.0
damage = 5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ci4kf"]
size = Vector2(32, 32)

[sub_resource type="Resource" id="Resource_srrmh"]
script = ExtResource("10_8xqa4")
state = NodePath("../../../Attacking/BasicAttack")

[sub_resource type="Resource" id="Resource_wljmr"]
script = ExtResource("11_4nqvq")
guard = SubResource("Resource_srrmh")

[sub_resource type="Resource" id="Resource_p6r68"]
script = ExtResource("10_8xqa4")
state = NodePath("../../../Damage/Dead")

[sub_resource type="Resource" id="Resource_srkw7"]
script = ExtResource("11_4nqvq")
guard = SubResource("Resource_p6r68")

[sub_resource type="Resource" id="Resource_rb1lx"]
script = ExtResource("12_t2foq")
guards = Array[Resource("res://addons/godot_state_charts/guard.gd")]([SubResource("Resource_wljmr"), SubResource("Resource_srkw7")])

[sub_resource type="Animation" id="Animation_a6hs8"]
resource_name = "attack"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qcj21"]
resource_name = "death"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.2),
"transitions": PackedFloat32Array(0.34151, 0.34151, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DeathParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lj4jm"]
_data = {
"attack": SubResource("Animation_a6hs8"),
"death": SubResource("Animation_qcj21")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_lb03b"]
particles_animation = true
particles_anim_h_frames = 31
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_0t0au"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
scale_min = 0.7
scale_max = 0.7
anim_speed_min = 1.0
anim_speed_max = 1.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mbyvb"]
particles_animation = true
particles_anim_h_frames = 44
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_paynb"]
lifetime_randomness = 0.11
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(16, 16, 1)
gravity = Vector3(0, 0, 0)
scale_min = 0.7
scale_max = 1.3
anim_speed_min = 1.0
anim_speed_max = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bif26"]
bg_color = Color(0.843137, 0.196078, 0.0666667, 1)

[node name="Zombie" type="CharacterBody2D"]
y_sort_enabled = true
collision_layer = 2
collision_mask = 0
script = ExtResource("1_56qy7")
attributes = SubResource("Resource_52qen")
attacks = Array[ExtResource("3_oxl25")]([SubResource("Resource_uyr1m")])

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = -17.0
offset_right = 17.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.431373, 0.0980392, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, 3)
scale = Vector2(0.0997529, 0.106163)
texture = ExtResource("4_njwdd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ci4kf")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 64.0
avoidance_enabled = true
radius = 32.0
avoidance_layers = 2
avoidance_mask = 2

[node name="StateChart" type="Node" parent="."]
script = ExtResource("5_1gsmk")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("6_gxvk7")

[node name="Movement" type="Node" parent="StateChart/Root"]
script = ExtResource("7_qxutn")
initial_state = NodePath("Walking")

[node name="Idle" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("8_wpqln")

[node name="toWalking" type="Node" parent="StateChart/Root/Movement/Idle"]
script = ExtResource("9_hy5u5")
to = NodePath("../../Walking")
event = &"start_walking"
guard = SubResource("Resource_rb1lx")

[node name="Walking" type="Node" parent="StateChart/Root/Movement"]
script = ExtResource("8_wpqln")

[node name="toIdle" type="Node" parent="StateChart/Root/Movement/Walking"]
script = ExtResource("9_hy5u5")
to = NodePath("../../Idle")
event = &"stop_walking"

[node name="Attacking" type="Node" parent="StateChart/Root"]
script = ExtResource("7_qxutn")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root/Attacking"]
script = ExtResource("8_wpqln")

[node name="toBasicAttack" type="Node" parent="StateChart/Root/Attacking/Idle"]
script = ExtResource("9_hy5u5")
to = NodePath("../../BasicAttack")
event = &"attack"

[node name="BasicAttack" type="Node" parent="StateChart/Root/Attacking"]
script = ExtResource("8_wpqln")

[node name="toIdle" type="Node" parent="StateChart/Root/Attacking/BasicAttack"]
script = ExtResource("9_hy5u5")
to = NodePath("../../Idle")
event = &"finish_attack"

[node name="Damage" type="Node" parent="StateChart/Root"]
script = ExtResource("7_qxutn")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root/Damage"]
script = ExtResource("8_wpqln")

[node name="toHit" type="Node" parent="StateChart/Root/Damage/Idle"]
script = ExtResource("9_hy5u5")
to = NodePath("../../Hit")
event = &"take_damage"

[node name="toDead" type="Node" parent="StateChart/Root/Damage/Idle"]
script = ExtResource("9_hy5u5")
to = NodePath("../../Dead")
event = &"death"

[node name="Hit" type="Node" parent="StateChart/Root/Damage"]
script = ExtResource("8_wpqln")

[node name="toIdle" type="Node" parent="StateChart/Root/Damage/Hit"]
script = ExtResource("9_hy5u5")
to = NodePath("../../../Movement/Idle")
event = &"end_damage"

[node name="toDead" type="Node" parent="StateChart/Root/Damage/Hit"]
script = ExtResource("9_hy5u5")
to = NodePath("../../Dead")
event = &"death"

[node name="Dead" type="Node" parent="StateChart/Root/Damage"]
script = ExtResource("8_wpqln")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lj4jm")
}

[node name="AttackParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_lb03b")
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_0t0au")
texture = ExtResource("13_wqag5")
lifetime = 0.5
one_shot = true
speed_scale = 2.0
explosiveness = 0.25

[node name="DeathParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_mbyvb")
emitting = false
amount = 3
process_material = SubResource("ParticleProcessMaterial_paynb")
texture = ExtResource("14_u2fls")
one_shot = true
explosiveness = 0.62
randomness = 0.1

[node name="AttackCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = 1
custom_minimum_size = Vector2(0, 4)
anchors_preset = 10
anchor_right = 1.0
offset_left = -31.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = -22.0
grow_horizontal = 2
size_flags_vertical = 4
theme_override_styles/fill = SubResource("StyleBoxFlat_bif26")
value = 100.0
show_percentage = false

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="state_entered" from="StateChart/Root/Movement/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Idle" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Walking" to="." method="_on_walking_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Attacking/Idle" to="." method="_on_attacking_idle_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Attacking/BasicAttack" to="." method="_on_attacking_basic_attack_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Damage/Dead" to="." method="_on_dead_state_entered"]
